--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-/* font-family: 'Roboto', sans-serif;
+/* 
+font-family: 'Roboto', sans-serif;
 font-family: 'Lobster', cursive;
 font-family: 'Modak', cursive;
 font-family: 'Pacifico', cursive;
-font-family: 'Josefin Slab', serif; */
+font-family: 'Josefin Slab', serif; 
+*/
 
-/* Itinializing */
+/* Initializing */
 
 * {
   font-size: 1rem;
